--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "lint": "npx eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "npx eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "test": "cypress open",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "autoprefixer": "^10.4.8",
     "bun-framework-next": "^12",
     "bun-livereload": "^1.0.3",
+    "cypress": "^10.4.0",
     "eslint": "^8.21.0",
     "eslint-config-next": "^12.2.3",
     "eslint-config-prettier": "^8.5.0",
@@ -32,7 +34,8 @@
     "prettier": "^2.7.1",
     "react-refresh": "0.10.0",
     "tailwindcss": "^3.1.7",
-    "typescript": "latest"
+    "typescript": "latest",
+    "webpack": "^5.74.0"
   },
   "module": "index.js"
 }
