--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "lint": "npx eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "npx eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
-    "test": "cypress open",
+    "test:gui": "cypress open",
+    "test": "cypress run && cypress run --component",
     "prepare": "husky install"
   },
   "dependencies": {
