--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:fix": "npx eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
     "test:gui": "cypress open",
     "test": "cypress run && cypress run --component",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.3",
@@ -32,6 +33,7 @@
     "eslint-plugin-tailwind": "^0.2.1",
     "eslint-plugin-tailwindcss": "^3.6.0",
     "husky": "^8.0.0",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "react-refresh": "0.10.0",
@@ -39,5 +41,9 @@
     "typescript": "latest",
     "webpack": "^5.74.0"
   },
-  "module": "index.js"
+  "module": "index.js",
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,jsx,ts,tsx}": "prettier --write"
+  }
 }
