--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint:fix": "npx eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
     "test:gui": "cypress open",
     "test": "cypress run && cypress run --component",
-    "postinstall": "husky install",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "dependencies": {
     "next": "12.1.3",
