--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
     "dev": "bun dev",
     "dev:styles": "bun dev & bun run styles:watch",
     "clean": "rm -rf node_modules",
-    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint": "npx eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "npx eslint --fix 'src/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --write",
+    "lint": "npx eslint",
+    "lint:fix": "npx eslint --fix --cache",
     "test:gui": "cypress open",
     "test": "cypress run && cypress run --component",
-    "postinstall": "husky install",
-    "prepare": "husky install"
+    "postinstall": "husky install"
   },
   "dependencies": {
     "next": "12.1.3",
@@ -43,7 +42,7 @@
   },
   "module": "index.js",
   "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,jsx,ts,tsx}": "prettier --write"
+    "*.js": "bun lint:fix",
+    "*.{js,jsx,ts,tsx}": "bun format"
   }
 }
