--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "styles:watch": "npx tailwindcss -i src/styles/globals.css -o src/styles/output.css --watch",
-    "dev": "bun dev",
     "dev:styles": "bun dev & bun run styles:watch",
     "clean": "rm -rf node_modules",
     "format": "prettier --write",
     "lint": "npx eslint",
     "lint:fix": "npx eslint --fix --cache",
     "test:gui": "cypress open",
-    "test": "cypress run && cypress run --component",
+    "test": "cypress run --component",
+    "test:full": "cypress run && cypress run --component",
     "postinstall": "husky install"
   },
   "dependencies": {
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/react": "^18",
     "autoprefixer": "^10.4.8",
-    "bun-framework-next": "^12",
+    "bun-framework-next": "^12.2.3",
     "bun-livereload": "^1.0.3",
     "cypress": "^10.4.0",
     "eslint": "^8.21.0",
@@ -38,7 +38,7 @@
     "react-refresh": "0.10.0",
     "tailwindcss": "^3.1.7",
     "typescript": "latest",
-    "webpack": "^5.74.0"
+    "webpack": "5.0.0"
   },
   "module": "index.js",
   "lint-staged": {
