--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 /.next/
 /out/
 
+# editor
+.vscode/
+
 # production
 /build
 
@@ -40,4 +43,3 @@ yarn-error.log*
 **/*.log
 package-lock.json
 **/*.bun
-cypress/screenshots
