--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "scripts": {
     "styles:watch": "npx tailwindcss -i src/styles/globals.css -o src/styles/output.css --watch",
     "dev:styles": "bun dev & bun run styles:watch",
-    "clean": "rm -rf node_modules",
+    "clean": "rm -rf node_modules .next node_modules.bun node_modules.server.bun",
     "format": "prettier --write",
     "lint": "npx eslint",
     "lint:fix": "npx eslint --fix --cache",
-    "postinstall": "husky install"
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.3",
@@ -38,7 +38,6 @@
   },
   "module": "index.js",
   "lint-staged": {
-    "*.js": "bun lint:fix",
-    "*.{js,jsx,ts,tsx}": "bun format"
+    "*.{js,jsx,ts,tsx}": "bun format && bun lint:fix"
   }
 }
